--- a/backend/public/stylesheets/style.css
+++ b/backend/public/stylesheets/style.css
@@ -1,8 +1,8 @@
 body {
   padding: 50px;
-  font: 14px , Helvetica, Arial, sans-serif;
+  font: 14px, Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+  color: #00b7ff;
 }
